<resources>
    <string name="app_name">Compose Journey</string>

    <!-- Navigation Drawer -->
    <string name="home">Início</string>
    <string name="privacy_policy">Política de Privacidade</string>
    <string name="saved_files">Arquivos Salvos</string>
    <string name="share_app">Compartilhar App</string>

    <!-- HomeScreen e TrackingScreen -->
    <string name="tracker">Rastreador</string>
    <string name="tracking_code">Código de rastreio</string>
    <string name="cep">CEP</string>
    <string name="track">Rastrear</string>
    <string name="tracking">Rastreamento</string>
    <string name="order_status">Status: Em trânsito</string>

</resources>